@@ -50,9 +50,6 @@
 #include "deskpro.h"
 #include "deskact.h"
 #include "desk1.h"
-#include "kprint.h"
-
-#define DBG_DESKMAIN 0
 
 #define abs(x) ( (x) < 0 ? -(x) : (x) )
 
@@ -1306,9 +1303,6 @@ WORD deskmain()
 
 
         /* initialize libraries */
-#if DBG_DESKMAIN
-        kprintf("EmuDESK: appl_init()\n");
-#endif
         gl_apid = appl_init();
                                                 /* get GEM's gsx handle */
         gl_handle = graf_handle(&gl_wchar, &gl_hchar, &gl_wbox, &gl_hbox);
@@ -1512,9 +1506,6 @@ WORD deskmain()
                                                 /*   input until done   */
         while( !done )
         {
-#if DBG_DESKMAIN
-          kprintf("EmuDESK: evnt_multi()\n");
-#endif
                                                 /* block for input      */
           ev_which = evnt_multi(flags, 0x02, 0x01, 0x01, 
                                 0, 0, 0, 0, 0, 0, 0, 0, 0, 0,
